@@ -1,19 +1,15 @@
-Please please please hack on gtk-sharp.
-
-Okay, now for the details.
+Before beginning work on something, please post your intentions to the 
+mailing list (gtk-sharp-list@ximian.com).  Duplication of effort just gets
+folks cranky in general.  
 
 Prior to checking anything into CVS, please send a patch to the mailing list
-(gtk-sharp-list@ximian.com) for approval.  Any patches should be submitted in
-diff -u format.  Also, it is assumed that the submitter has verified that the
-patch does not break the build, and hopefully that it doesn't break runtime.
+for approval.  Any patches should be submitted in diff -u format.  Also, it is 
+assumed that the submitter has verified that the patch does not break the 
+build, and hopefully that it doesn't break runtime.
 
-Second, patches without Documentation comments will be seriously frowned upon,
+Patches without Documentation comments will be seriously frowned upon,
 if not outright rejected.  All classes, methods, properties, events, etc...
 that are non-private should be documented with XML comment tags.  At a minimum,
-the summary and remarks tags, plus returns and params, if applicable.
-
-Third, Make a ChangeLog entry.  Get credit for your hard work, and let me know
-who I need to get cranky with at a glance, instead of having to do cvs history
-reports.  :-)
-
-Fourth, please please please hack on gtk-sharp.  
+the summary and remarks tags, plus returns and params, if applicable. Doing 
+this as we go is the only feasible way to make sure that our docs won't end
+up sucking bigtime.
